--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,8 +14,8 @@ name: Build and Deploy to Proen
 
 on:
   push:
-    branches: [ "develop","main" ]
-    tags: [ 'v*.*.*' ]
+    # branches: [ "develop","main" ]
+    # tags: [ 'v*.*.*' ]
 
 env:
   REGISTRY: ghcr.io
@@ -56,7 +56,7 @@ jobs:
 
     - name: 'Pull Image'
       run: |-
-        
+
 
 
 
