feat: add git action

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: echo valeues
+        run: |-
+          echo "${{ env.HELLO_TEST }}"
       # Install the cosign tool except on PR
       # https://github.com/sigstore/cosign-installer
       - name: Install cosign
