feat: add git action

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -14,7 +14,6 @@ env:
   REGISTRY: ghcr.io
   # github.repository as <account>/<repo>
   IMAGE_NAME: ${{ github.repository }}
-  HELLO_TEST: $HELLO_TEST
 
 
 jobs:
@@ -35,7 +34,7 @@ jobs:
 
       - name: echo valeues
         run: |-
-          echo "${{ env.HELLO_TEST }}"
+          echo "${{ vars.HELLO_TEST }}"
       # Install the cosign tool except on PR
       # https://github.com/sigstore/cosign-installer
       - name: Install cosign
