feat: add git action

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,6 +55,10 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
+    - name: Pull image from registry
+      run: |-
+        docker inspect ghcr.io/${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+
 
 
 
