feat: add git action

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -68,3 +68,41 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
+  setup-build-publish-deploy:
+    needs: build
+    if: ${{ github.ref == 'refs/heads/develop' && github.event_name == 'push' }}
+    name: Set-version and Deploy
+    runs-on: mikefarah/yq:latest-githubaction
+    environment: production
+
+    permissions:
+      contents: 'read'
+      id-token: 'write'
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    # Configure Workload Identity Federation and generate an access token.
+    - id: 'auth'
+      name: 'Authenticate to Proen Cloud'
+      run: |-
+        kubectl config set-cluster tcc-01 --server=${{ env.CLUSTER_NAME }} 
+        kubectl config set-context  tcc-01 --cluster=tcc-01
+        kubectl config set-credentials tcc-01-user --token=${{ secrets.CLUSTER_TOKEN }}
+        kubectl config set-context  tcc-01 --user=tcc-01-user
+        kubectl config use-context  tcc-01
+        kubectl get ns
+
+    - name: Log into registry ${{ env.REGISTRY }}
+      if: github.event_name != 'pull_request'
+      uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Pull image from registry
+      run: |-
+        docker inspect ghcr.io/${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
