--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,11 +5,31 @@ name: '⭐️ Build and Deploy'
 # separate terms of service, privacy policy, and support
 # documentation.
 
+# on:
+#   push:
+#     branches: [ "develop" ]
+#   pull_request:
+#     branches: [ "develop" ]
+
 on:
-  push:
-    branches: [ "develop" ]
-  pull_request:
-    branches: [ "develop" ]
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'build image'
+        required: true
+        default: 'build'
+        type: choice
+        options:
+        - push
+        - deploy
+      tags:
+        description: 'Test scenario tags'
+        required: false
+        type: boolean
+      environment:
+        description: 'Environment to run tests against'
+        type: environment
+        required: true
 
 env:
   # Use docker.io for Docker Hub if empty
