--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -2,23 +2,11 @@ name: '🚓 CodeQL Analysis'
 # Only run on schedule and PR because it's really slow
 
 on:
-  workflow_dispatch:
-    inputs:
-      logLevel:
-        description: 'build image'
-        required: true
-        default: 'warning'
-        type: choice
-        options:
-        - codeql-analysis
-      tags:
-        description: 'Test scenario tags'
-        required: false
-        type: boolean
-      environment:
-        description: 'Environment to run tests against'
-        type: environment
-        required: true      # allow manual runs
+  push:
+    branches: [ "feature/*" ]
+  schedule:
+    - cron: '0 06 1,15 * *' # 6am on 1st and 15th of every month
+  workflow_dispatch:      # allow manual runs
 
 jobs:
   analyze:
