--- a/.github/workflows/test-context.yml
+++ b/.github/workflows/test-context.yml
@@ -22,3 +22,4 @@ jobs:
             source $GITHUB_ENV
             echo "$HELLO"
             echo "${{ github.base_ref }}"
+            echo "${{ github.ref }}"
