feat: add rg dev and prod

--- a/.github/workflows/test-context.yml
+++ b/.github/workflows/test-context.yml
@@ -4,7 +4,7 @@ name: "🚓 Test Context"
 on:
   push:
     branches: 
-      - "feature*"
+      - 'feature/**'
   workflow_dispatch: # allow manual runs
 
 jobs:
