--- a/.github/workflows/publish-prd.yml
+++ b/.github/workflows/publish-prd.yml
@@ -1,4 +1,4 @@
-name: "🔥 Taging and Deploy"
+name: "🔥 Release Production Tag"
 
 on:
   push:
@@ -12,32 +12,7 @@ env:
   CLUSTER_NAME: https://tcc-01.th1.proen.cloud/api/
 
 jobs:
-  checkout_image:
-    runs-on: ubuntu-latest
-    outputs:
-      image_tag: ${{ steps.tag_step.outputs.previous_image_tag }}
-    environment: prod
-    permissions:
-      contents: read
-      packages: write
-      id-token: write
-
-    steps:
-      - name: Clone nonprod repository
-        uses: actions/checkout@v3
-        with:
-          repository: 'the-cloud-camp/tcc-k8s-config-nonprd'
-          token: ${{ secrets.GH_PAT }}  # Use your PAT for private repositories
-          path: 'tcc-k8s-config-nonprd'
-          ref: main
-
-      - name: Get Image Tag
-        working-directory: tcc-k8s-config-nonprd
-        run: |
-          previous_image_tag=$(yq e '.spec.template.spec.containers[0].image' kai-nuxtjs/deployment.yaml | cut -d ':' -f 2)
-          echo "previous_image_tag=$previous_image_tag" >> $GITHUB_OUTPUT
-          
-  tagging:
+  checkout_tag_image:
     runs-on: ubuntu-latest
     outputs:
       image_tag: ${{ steps.meta.outputs.image_tag }}
@@ -56,27 +31,8 @@ jobs:
       - name: Cat version
         run: |-
           cat package.json | jq -r .version
-          echo "IMAGE_TAG=$(cat package.json | jq -r .version)" >> $GITHUB_ENV
+          echo "image_tag=$(cat package.json | jq -r .version)" >> $GITHUB_ENV
 
-      - name: Log into registry ${{ env.REGISTRY }}
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-        
-      - name: Retag Image
-        run: |
-          original_tag=${{ needs.checkout_image.outputs.previous_image_tag }}
-          source $GITHUB_ENV
-          new_tag=$IMAGE_TAG  # Define your new tag here
-
-          # Assuming you are using Docker
-          docker pull ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:$original_tag
-          docker tag  ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:$original_tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:$new_tag
-          docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:$new_tag
-      
   set_version_image:     
     runs-on: ubuntu-latest
     environment: prod
