--- a/.github/workflows/publish-prd.yml
+++ b/.github/workflows/publish-prd.yml
@@ -37,6 +37,7 @@ jobs:
 
   set_version_image:     
     runs-on: ubuntu-latest
+    needs: checkout_tag_image
     environment: prod
     permissions:
       contents: read
